--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アンケート</title>
     <style>
+        		input{
+			font-size:16px;
+		}
         body {
             display: flex;
             flex-direction: column;
