--- a/index.html
+++ b/index.html
@@ -67,11 +67,85 @@ container {
 p.center{
   text-align: center;
 }
-
+#loader.open {
+    animation-name: slideOut;
+    animation-fill-mode: forwards;
+    animation-duration: 2s;
+    animation-delay: 2s;
+}
+#loader {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 101;
+    background-color: #333;
+}
+#loader .f_logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 320px;
+    height: 50px;
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+}
+#loader .f_logo img {
+    width: 100%;
+    height: auto;
+}
+@keyframes slideOut {
+  0% {
+    transform: translateX(0%);
+  }
+  50% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+#loader .f_logo:before {
+    animation: loadLogo 1.5s;
+}
+#loader .f_logo:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 110%;
+    background-color: #333;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    animation: loadLogo 1.5s;
+}
+@keyframes loadLogo {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 0;
+  }
+  100% {
+    left: 100%;
+  }
+}
     </style>
 </head>
 <body>
 <p >
+    <div id="loader" class="open">
+        <dvi class="f_logo">
+         ROCK CUBE
+         <img src="ヤモリ.png" alt="logo">
+         </dvi>
+    </div>
     <div id="start-container" ><p class="center">
        <img src="e430235b.jpg" height="100px"></p><h1> 
         ロックキューブ体力スト</h1>
