--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ p.center{
          </dvi>
     </div>
     <div id="start-container" ><p class="center">
-       <img src="e430235b.jpg" height="100px"></p><h1> 
+       <img src="ヤモリ.png" height="100px"></p><h1> 
         ロックキューブ体力スト</h1>
         <input type="text" id="name" placeholder="お名前" required>
         <select id="gender">
