--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ p.center{
 <p >
     <div id="loader" class="open">
         <dvi class="f_logo">
-         ROCK CUBE
+            <font face="cursive" size="10"><b>ROCK CUBE</b></font>
          <img src="ヤモリ.png" alt="logo">
          </dvi>
     </div>
