--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@ p.center{
     width: 320px;
     height: 50px;
     text-align: center;
+    vertical-align: center;
     color: #fff;
     font-size: 30px;
 }
 #loader .f_logo img {
     width: 100%;
     height: auto;
+    vertical-align: center;
 }
 @keyframes slideOut {
   0% {
