--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ p.center{
 }
 #loader .f_logo img {
     width: 100%;
-    height: auto;
+    height: 100%;
     vertical-align: center;
 }
 @keyframes slideOut {
