--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>アンケート</title>
     <style>
-        		input{
-			font-size:16px;
-		}
+        input {
+            font-size: 16px;
+        }
         body {
             display: flex;
             flex-direction: column;
@@ -48,96 +47,93 @@
             animation: zoomin 3.5s;
         }
         @keyframes zoomin {
-  0% {
-    transform: scale(0.2);
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-    transform: scale(1);
-  }
-}
-.flex {
-  display: flex; /*横並び*/
-}
-container {
-  display: flex;
-  justify-content: space-evenly;
-}
-p.center{
-  text-align: center;
-}
-#loader.open {
-    animation-name: slideOut;
-    animation-fill-mode: forwards;
-    animation-duration: 2s;
-    animation-delay: 2s;
-}
-#loader {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 101;
-    background-color: #333;
-}
-#loader .f_logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 320px;
-    height: 50px;
-    text-align: center;
-    vertical-align: center;
-    color: #fff;
-    font-size: 30px;
-}
-#loader .f_logo img {
-    width: 100%;
-    height: auto;
-    vertical-align: center;
-}
-@keyframes slideOut {
-  0% {
-    transform: translateX(0%);
-  }
-  50% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(100%);
-  }
-}
-#loader .f_logo:before {
-    animation: loadLogo 1.5s;
-}
-#loader .f_logo:before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 110%;
-    background-color: #333;
-    position: absolute;
-    top: 0;
-    left: 100%;
-    animation: loadLogo 1.5s;
-}
-@keyframes loadLogo {
-  0% {
-    left: 0;
-  }
-  50% {
-    left: 0;
-  }
-  100% {
-    left: 100%;
-  }
-}
+            0% {
+                transform: scale(0.2);
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+        .flex {
+            display: flex; /* 横並び */
+        }
+        container {
+            display: flex;
+            justify-content: space-evenly;
+        }
+        p.center {
+            text-align: center;
+        }
+        #loader.open {
+            animation-name: slideOut;
+            animation-fill-mode: forwards;
+            animation-duration: 2s;
+            animation-delay: 2s;
+        }
+        #loader {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 101;
+            background-color: #333;
+        }
+        #loader .f_logo {
+            position: absolute;
+            top: 50%; /* 中央配置 */
+            left: 50%; /* 中央配置 */
+            transform: translate(-50%, -50%); /* 中央配置のための変形 */
+            width: 320px;
+            height: 50px;
+            text-align: center;
+            color: #fff;
+            font-size: 30px;
+        }
+        #loader .f_logo img {
+            width: 100%;
+            height: auto;
+            vertical-align: center;
+        }
+        @keyframes slideOut {
+            0% {
+                transform: translateX(0%);
+            }
+            50% {
+                transform: translateX(0%);
+            }
+            100% {
+                transform: translateX(100%);
+            }
+        }
+        #loader .f_logo:before {
+            animation: loadLogo 1.5s;
+        }
+        #loader .f_logo:before {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 110%;
+            background-color: #333;
+            position: absolute;
+            top: 0;
+            left: 100%;
+            animation: loadLogo 1.5s;
+        }
+        @keyframes loadLogo {
+            0% {
+                left: 0;
+            }
+            50% {
+                left: 0;
+            }
+            100% {
+                left: 100%;
+            }
+        }
     </style>
 </head>
 <body>
