--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCK CUBE 体力テスト</title>
+    <title>アンケート</title>
     <style>
-        input {
-            font-size: 16px;
-        }
+        		input{
+			font-size:16px;
+		}
         body {
             display: flex;
             flex-direction: column;
@@ -47,102 +48,112 @@
             animation: zoomin 3.5s;
         }
         @keyframes zoomin {
-            0% {
-                transform: scale(0.2);
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-                transform: scale(1);
-            }
+  0% {
+    transform: scale(0.2);
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+    transform: scale(1);
+  }
+}
+.flex {
+  display: flex; /*横並び*/
+}
+container {
+  display: flex;
+  justify-content: space-evenly;
+}
+p.center{
+  text-align: center;
+}
+#loader.open {
+    animation-name: slideOut;
+    animation-fill-mode: forwards;
+    animation-duration: 2s;
+    animation-delay: 2s;
+}
+#loader {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 101;
+    background-color: #333;
+}
+#loader .f_logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 320px;
+    height: 50px;
+    text-align: center;
+    vertical-align: center;
+    color: #fff;
+    font-size: 30px;
+}
+#loader .f_logo img{
+    width: 100%;
+    height: auto;
+    vertical-align: center;
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0%);
+  }
+  50% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+#loader .f_logo:before {
+    animation: loadLogo 1.5s;
+}
+#loader .f_logo:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 110%;
+    background-color: #333;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    animation: loadLogo 1.5s;
+}
+@keyframes loadLogo {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 0;
+  }
+  100% {
+    left: 100%;
+  }
+}
+#detailedResults {
+            display: none; /* 常に非表示にする */
         }
-        .flex {
-            display: flex; /* 横並び */
-        }
-        container {
-            display: flex;
-            justify-content: space-evenly;
-        }
-        p.center {
-            text-align: center;
-        }
-        #loader.open {
-            animation-name: slideOut;
-            animation-fill-mode: forwards;
-            animation-duration: 2s;
-            animation-delay: 2s;
-        }
-        #loader {
-            display: block;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            z-index: 101;
-            background-color: #333;
-        }
-        #loader .f_logo {
-            position: absolute;
-            top: 20%; /* 中央配置 */
-            left: 50%; /* 中央配置 */
-            transform: translate(-50%, -50%); /* 中央配置のための変形 */
-            width: 320px;
-            height: 50px;
-            text-align: center;
-            color: #fff;
-            font-size: 30px;
-        }
-        #loader .f_logo img {
-            width: 100%;
-            height: auto;
-            vertical-align: center;
-        }
-        @keyframes slideOut {
-            0% {
-                transform: translateX(0%);
-            }
-            50% {
-                transform: translateX(0%);
-            }
-            100% {
-                transform: translateX(100%);
-            }
-        }
-        #loader .f_logo:before {
-            animation: loadLogo 1.5s;
-        }
-        #loader .f_logo:before {
-            content: "";
-            display: block;
-            width: 100%;
-            height: 110%;
-            background-color: #333;
-            position: absolute;
-            top: 0;
-            left: 100%;
-            animation: loadLogo 1.5s;
-        }
-        @keyframes loadLogo {
-            0% {
-                left: 0;
-            }
-            50% {
-                left: 0;
-            }
-            100% {
-                left: 100%;
-            }
-        }
+        #detailsContent {
+        text-align: left; /* テキストを左寄せにする */
+    }
     </style>
 </head>
 <body>
 <p >
     <div id="loader" class="open">
-        <dvi class="f_logo">
+        <div class="f_logo">
             <font face="cursive" size="10"><b>ROCK CUBE</b></font>
          <img src="ヤモリ.png" alt="logo">
-         </dvi>
+         </div>
     </div>
     <div id="start-container" ><p class="center">
        <img src="ヤモリ.png" height="100px"></p><h1> 
@@ -160,19 +171,30 @@
         <div id="options"></div>
     </div>
 </p>
-    <div id="result">ロックキューブ体力テスト<canvas id="myRadar" style="width: 100%; height: 300px;"></canvas>
-        <dvi class="flex">
-            <img id="gazo" name="gazo" style="height : 100px"> 
-            <font size="1">
-        <h2 id="result-text"></h2></font>
-</dvi>
+<div id="result">
+    ロックキューブ体力テスト
+    <canvas id="myRadar" style="width: 100%; height: 300px;"></canvas>
+    <div class="flex">
+        <img id="gazo" name="gazo" style="height: 100px"> 
+        <font size="1">
+            <h2 id="result-text"></h2>
+        </font>
     </div>
+    <button id="detailButton" class="button" onclick="showDetailResults()" style="display: none;">詳細結果</button>
+ <div id="detailedResults" style="display: none;">
+        <div  id="detailsContent"></div>
+        <button onclick="closeDetailResults()">閉じる</button>
+    </div>
+</div>
 
     <script>
         const questions = [
             { text: "質問1: ビーストメーカー7秒ぶら下がれるのは何mm？", options: ["15mm", "10mm", "7mm", "5mm"], scores: [1, 2, 3, 4] },
-            { text: "質問2: 10mmで何秒ぶら下がれる？", options: ["10秒以下","10秒～30秒","30秒～1分","1分以上"], scores: [1, 2, 3, 4] },
-            { text: "質問3: 懸垂何回できる？", options: ["5回未満",  "5～10回", "11～20回", "20回以上"], scores: [1, 2, 3, 4] }
+            { text: "質問2: スローパー持てる?", options: ["10秒以下","10秒～30秒","30秒～1分","1分以上"], scores: [1, 2, 3, 4] },
+            { text: "質問3: 懸垂何回できる？", options: ["5回未満",  "5～10回", "11～20回", "20回以上"], scores: [1, 2, 3, 4] },
+            { text: "質問4: 柔軟性ある?", options: ["5回未満",  "5～10回", "11～20回", "20回以上"], scores: [1, 2, 3, 4] },
+            { text: "質問5: スラブできる？", options: ["5回未満",  "5～10回", "11～20回", "20回以上"], scores: [1, 2, 3, 4] },
+            { text: "質問6: コーディネーションできる？", options: ["できない",  "できそう", "できる", "得意"], scores: [1, 2, 3, 4] }
         ];
 
         let currentQuestionIndex = 0;
@@ -247,27 +269,25 @@ for (let i = 0; i < point.length; i++) {
     document.getElementById("gazo").src="綱吉.png";
     document.getElementById("gazo").alt="綱吉";
             }
-            else if(maxpointi ==1 && maxpointii == 2){
-    document.getElementById("gazo").src="チーター.png";
-    document.getElementById("gazo").alt="チーター";
-}
-else if(maxpointi ==1 && maxpointii == 3){
-    document.getElementById("gazo").src="サメ.png";
-    document.getElementById("gazo").alt="サメ";
-}
-else if(maxpointi ==2 && maxpointii == 3){
-    document.getElementById("gazo").src="うま.png";
-    document.getElementById("gazo").alt="うま";
-}
+            
 else if ( maxpointi == 1) {
-    document.getElementById("gazo").src="ワシ.png";
-    document.getElementById("gazo").alt="ワシ";
+    document.getElementById("gazo").src="ムシ.png";
+    document.getElementById("gazo").alt="ムシ";
 }else if( maxpointi == 2){
-    document.getElementById("gazo").src="マグロ.png";
-    document.getElementById("gazo").alt="マグロ";
+    document.getElementById("gazo").src="ヤモリ.png";
+    document.getElementById("gazo").alt="ヤモリ";
 }else if( maxpointi == 3){
     document.getElementById("gazo").src="ゴリラ.png";
     document.getElementById("gazo").alt="ゴリラ";
+}else if( maxpointi == 4){
+    document.getElementById("gazo").src="タコ.png";
+    document.getElementById("gazo").alt="タコ";
+}else if( maxpointi == 5){
+    document.getElementById("gazo").src="忍者.png";
+    document.getElementById("gazo").alt="忍者";
+}else if( maxpointi == 6){
+    document.getElementById("gazo").src="ターザン.png";
+    document.getElementById("gazo").alt="ターザン";
 }
 }
 
@@ -278,26 +298,25 @@ else if ( maxpointi == 1) {
 for (let i = 0; i < point.length; i++) {
   tunayosi = tunayosi + point[i];
 }
+let totalPoints = point.reduce((acc, val) => acc + val, 0);
             document.getElementById("question-container").style.display = "none";
             document.getElementById("result").style.display = "block";
+            document.getElementById("detailButton").style.display = "block";
             if(tunayosi == 12){
-    document.getElementById("result-text").innerText =`${userName}は 全項目満点です!! \n あなたなら綱吉バッチが狙えるかも!? `;
-}
-else if(maxpointi ==1 && maxpointii == 2){
-    document.getElementById("result-text").innerText =`${userName}は チーター タイプです。(持久力,カチ)\n 総合点は ${totalScore}点です`;
-}
-else if(maxpointi ==1 && maxpointii == 3){
-    document.getElementById("result-text").innerText =`${userName}は サメ タイプです。(パワー,カチ)\n 総合点は ${totalScore}点です`;
-}
-else if(maxpointi ==2 && maxpointii == 3){
-    document.getElementById("result-text").innerText =`${userName}は うま タイプです。(持久力,パワー)\n 総合点は ${totalScore}点です`;
+    document.getElementById("result-text").innerText =`${userName}さんは 全項目満点です!! \n あなたなら綱吉バッチが狙えるかも!? `;
 }
 else if ( maxpointi == 1) {
-    document.getElementById("result-text").innerText =`${userName}は ワシ タイプです。(カチ)\n 総合点は ${totalScore}点です`;
+    document.getElementById("result-text").innerText =`${userName}さんは ムシ タイプです。(カチ)\n 総合点は ${totalScore}点です`;
 }else if( maxpointi == 2){
-    document.getElementById("result-text").innerText =`${userName}は マグロ タイプです。(持久力)\n 総合点は ${totalScore}点です`;
+    document.getElementById("result-text").innerText =`${userName}さんは ヤモリ タイプです。(持久力)\n 総合点は ${totalScore}点です`;
 }else if( maxpointi == 3){
-    document.getElementById("result-text").innerText =`${userName}は ゴリラ タイプです。(パワー)\n 総合点は ${totalScore}点です`;
+    document.getElementById("result-text").innerText =`${userName}さんは ゴリラ タイプです。(パワー)\n 総合点は ${totalScore}点です`;
+}else if( maxpointi == 4){
+    document.getElementById("result-text").innerText =`${userName}さんは タコ タイプです。(パワー)\n 総合点は ${totalScore}点です`;
+}else if( maxpointi == 5){
+    document.getElementById("result-text").innerText =`${userName}さんは 忍者 タイプです。(パワー)\n 総合点は ${totalScore}点です`;
+}else if( maxpointi == 6){
+    document.getElementById("result-text").innerText =`${userName}さんは ターザン タイプです。(パワー)\n 総合点は ${totalScore}点です`;
 }
 
         if(genderf == 1){
@@ -305,7 +324,7 @@ else if ( maxpointi == 1) {
 [ {
                         label: 'あなたの体力測定結果',
                           lineTension: 0, // ベジェ曲線を無効化
-                          data: [point[0], point[1], point[2]],
+                          data: [point[0], point[1], point[2], point[3], point[4], point[5]],
                           backgroundColor: 'RGBA(96,218,255, 0.4)',
                           borderColor: 'RGBA(101,96,255, 1)',
                           borderWidth: 1,
@@ -317,7 +336,7 @@ else if ( maxpointi == 1) {
 [ {
                           label: 'あなたの体力測定結果',
                           lineTension: 0, // ベジェ曲線を無効化
-                          data: [point[0], point[1], point[2]],
+                          data: [point[0], point[1], point[2], point[3], point[4], point[5]],
                           backgroundColor: 'RGBA(255,96,202, 0.4)',
                           borderColor: 'RGBA(182,39,93, 1)',
                           borderWidth: 1,
@@ -328,7 +347,7 @@ else if ( maxpointi == 1) {
                       var myRadar = new Chart(myRadarElement, {
                       type: 'radar', // チャートのタイプ
                       data: { // チャートの内容
-                        labels: ["カチ", "持久力", "パワー"],
+                        labels: ["カチ", "スローパー", "パワー/体幹","柔軟性", "足使い/バランス", "コーディネーション"],
                         datasets: datasets },
                         options: { 
                           scale:{
@@ -337,10 +356,71 @@ else if ( maxpointi == 1) {
                               suggestedMax: 4,
                               stepSize: 1
                             }
-                          }
+                  }
                         }
                       });
                     }
+
+                    function showDetailResults() {
+            const detailedResultsDiv = document.getElementById("detailedResults");
+            let detailsContent = document.getElementById("detailsContent");
+            var details ;
+details =`2345`;
+if(maxpointi==1){
+    details = `あなたは虫タイプです。どんなに細かい小さなホールドでも重さを感じさせずに持ててしまうそ
+の様子は、まるで虫。現代のクライミングシーンでは、ホールドが巨大化していく中でそのカチを
+持てるという価値(!?)はかつてほどの注目を集めることはありません。でも、カチに対する保持力
+は外岩において今も色褪せることはありません。もし外岩を経験したことがないなら、あなたの
+フィールドはそっちに広がっているかもしれませんね！ `;
+}
+if(maxpointi==2){
+details = `あなたはヤモリタイプです。普通の人が、どうやっても持てないというスローパーをあなたは何故
+か持ててしまいます。きっとあなたも思っているはず、「なぜみんなは持てないのだろうか？」
+と。その様子はまるでヤモリ。スローパーを持っているわけではなく、スローパーが勝手に手に
+くっついてしまうのです。普通の人にはその感覚はないのですよ。スローパーをさらに押さえられ
+るようになるためにはパワーも重要ですので、ぜひ鍛えてみては！ `;
+}
+if(maxpointi==3){
+details = `あなたはゴリラタイプです。全てのクライミングを他を圧倒するパワーで制圧していきます。パ
+ワーこそが全て。私の尊敬するあるクライマー（現在はセッター）は言っています、「クライミン
+グは結局パワーです」と。そのパワーを遺憾無く発揮し、これからも見るものを圧倒する登りを
+してください。ただ、少し気にしたいのが怪我です。どうしても身体に強い負荷がかかりますの
+で、怪我にだけはお気をつけて！ `;
+}
+if(maxpointi==4){
+details = `あなたはタコタイプです。壁の中で、その柔軟性を活かして体勢を変幻自在に変化させるその様子
+はまるでたこ。他の人が手で使うホールドに足をあげ、他の人が届かないホールドに足を伸ばし、
+他の人が入り込めない凹角に体を滑り込ませることができます。周りは言います「柔らかいです
+ねー！」、そしてあなたは返します「そんなに柔らかくはないです」と。その柔らかさは、足で
+負担する体重の量を劇的に増やします。ボルダリング以上にロープクライミングで、その長所が活
+かせるでしょう。もしやったことがなければ是非やってみることをお勧めします！`;
+}
+if(maxpointi==5){
+details = `あなたは忍者タイプです。あなたの登っている姿は静かでとても美しいはずです。あなたは低グ
+レードの課題を登ろうと、高グレードの課題を登ろうと、その登っている姿にあまり変化はあり
+ません。高グレードの課題をまるで簡単な課題のように登ります。その登り方は、見ている人に
+感動を与えるでしょう。クライミングには”強い”要素と”上手い”要素があり、あなたは後者を持っ
+ています。きっと、クライミングについて、自分の身体の動かし方について、深く考察しているで
+しょう。その稀有な才能を活かすために”強さ”をも求めたとき、あなたはさらに一歩クライミング
+の深淵に足を踏み入れることになるでしょう。羨ましい限りです！ `;
+}
+if(maxpointi==6){
+details = `あなたはターザンタイプです。その高い運動能力を活かした登りは、今のクライミングシーンに
+最もマッチしています。難易度高いコーディネーションやランジを、少ないトライでモノにしてし
+まうあなたの運動能力はまるでターザン。あなたが登ったコーディネーションは何故か簡単に見え
+るため、多くの人がその後に続いてトライしますが誰も後に続くことができないはず。その身体の
+バネを最大限に活かした登りは、常に歓声の的でしょう！静的なクライミングも得意ですか？そ
+れなら言うことはありません。もしそっちのクライミングをあまりしないようであれば、そっち
+もまた面白さがありますので、そっちでもその身体能力を存分に発揮してください！`;
+}
+ detailsContent.innerHTML = details; // innerHTMLに詳細をセット
+
+            detailedResultsDiv.style.display = "block"; // 詳細結果を表示
+        }
+
+        function closeDetailResults() {
+            document.getElementById("detailedResults").style.display = "none"; // 詳細結果を非表示
+        }
 
         function restartSurvey() {
             currentQuestionIndex = 0;
@@ -349,7 +429,11 @@ else if ( maxpointi == 1) {
             document.getElementById("start-container").style.display = "block";
             document.getElementById("question-container").style.display = "none";
             document.getElementById("result").style.display = "none";
+            document.getElementById("detailedResults").style.display = "none";
+            document.getElementById("detailButton").style.display = "none";
+            point = [];
         }
+
     </script>
 
 </body>
