--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ p.center{
     <div id="loader" class="open">
         <div class="f_logo">
             <font face="cursive" size="10"><b>ROCK CUBE</b></font>
-         <img src="ヤモリ.png" alt="logo">
+         <img src="ロゴ.jpg" alt="logo">
          </div>
     </div>
     <div id="start-container" ><p class="center">
-       <img src="ヤモリ.png" height="100px"></p><h1> 
+       <img src="ロゴ.jpg" width="200Px"></p><h1> 
         ロックキューブ体力スト</h1>
         <input type="text" id="name" placeholder="お名前" required>
         <select id="gender">
