--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             }
 
             100% {
-                transform: translateX(100%);
+                transform: translateY(-100%);
             }
         }
 
@@ -144,19 +144,6 @@
             left: 100%;
         }
 
-        @keyframes loadLogo {
-            0% {
-                left: 0;
-            }
-
-            50% {
-                left: 0;
-            }
-
-            100% {
-                left: 100%;
-            }
-        }
 
         #detailedResults {
             display: none;
