--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     <div id="start-container">
         <p class="center">
-            <img src="ロゴ.jpg" width="200Px">
+            <img src="ロゴ.png" width="200Px">
         </p>
         <h1>
             ロックキューブ体力スト</h1>
