--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ロックキューブ体力テスト</title>
+    <title>ロックキューブ体力測定</title>
     <style>
         input {
             font-size: 16px;
@@ -20,6 +20,7 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
+            vertical-align: text-top;
         }
 
         #question-container {
@@ -221,7 +222,7 @@
             <img src="ロゴ.png" width="200Px">
         </p>
         <h1>
-            ロックキューブ体力スト</h1>
+            ロックキューブ体力測定</h1>
         <input type="text" id="name" placeholder="お名前" required>
         <select id="gender">
             <option value="male">男性</option>
@@ -236,7 +237,7 @@
     </div>
     </p>
     <div id="result">
-        ロックキューブ体力テスト
+        <img src="ロゴ.png" width="200Px">  体力測定
         <canvas id="myRadar" style="width: 100%; height: 300px;"></canvas>
         <div class="flex">
             <img id="gazo" name="gazo" style="height: 100px">
