--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
         <div id="options"></div>
     </div>
     </p>
-    <div id="result">
-        <img src="ロゴ.png" width="200Px">  体力測定
+    <div id="result"><p>
+        <img src="ロゴ.png" width="200Px"></p>  体力測定結果
         <canvas id="myRadar" style="width: 100%; height: 300px;"></canvas>
         <div class="flex">
             <img id="gazo" name="gazo" style="height: 100px">
