--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
         </p>
         <h1>
             ロックキューブ体力測定</h1>
-        <input type="text" id="name" placeholder="お名前" required>\n
+        <input type="text" id="name" placeholder="お名前" required><br>
         <select id="gender">
             <option value="male">男性</option>
             <option value="female">女性</option>
-        </select>\n
+        </select><br>
         <button onclick="startSurvey()">開始</button>
     </div>
     <p justify-content: space-evenly;>
