--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            margin: 5px;
             font-family: Arial, sans-serif;
             vertical-align: text-top;
         }
